src/objects/Update_Survey_Event__e.object
<CustomObject>
    <description>CRM-MC-ESPSFDCQI-9854</description>
    <fields>
        <fullName>Is_Insert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <description>CRM-MC-ESPSFDCQI-9854</description>
        <label>Opportunity ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type  ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_record_ID__c</fullName>
        <description>CRM-MC-ESPSFDCQI-9854</description>
        <label>Related record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_PIC_ID__c</fullName>
        <description>CRM-MC-ESPSFDCQI-9854</description>
        <label>Survey PIC ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Origin__c</fullName>
        <description>CRM-MC-ESPSFDCQI-9854</description>
        <label>Trigger Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Update Survey Event</label>
    <pluralLabel>Update Surveys Event</pluralLabel>
</CustomObject>